updating style sheet

--- a/index.html
+++ b/index.html
@@ -3,86 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <title>University Wars</title>
-</head>
-<body>
-=======
     <title>Your Twitter-Like Website</title>
-    <style>
-        /* Reset some default styles to make the layout consistent */
-        body, h1, p {
-            margin: 0;
-            padding: 0;
-        }
-
-        /* Basic styling for the layout */
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: row;
-            background-color: #f0f0f0;
-        }
-
-        /* Sidebar styles */
-        .sidebar {
-            width: 250px;
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-        }
-
-        /* Main content styles */
-        .main-content {
-            flex-grow: 1;
-            padding: 20px;
-        }
-
-        /* Right column styles */
-        .right-column {
-            width: 300px;
-            background-color: #ddd;
-            position: sticky;
-            top: 0;
-            padding: 20px;
-        }
-
-        /* Post container styles */
-        .post {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            padding: 10px;
-        }
-
-        /* Profile icon styles */
-        .profile-icon {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: #333;
-            float: left;
-            margin-right: 10px;
-        }
-
-        /* Handle and name styles */
-        .handle, .name {
-            display: inline-block;
-            vertical-align: middle;
-        }
-
-        .handle {
-            font-weight: bold;
-            margin-right: 5px;
-        }
-
-        /* Post content styles */
-        .post-content {
-            margin-top: 10px;
-            clear: left;
-        }
-    </style>
+    <link rel="stylesheet" href="./stylesheet.css">
 </head>
 <body>
     <div class="sidebar">
@@ -125,6 +47,5 @@
         <p>These components will remain fixed even when scrolling the main content.</p>
         <!-- Add more static components as needed -->
     </div>
->>>>>>> 1bd0c7cbd039a78ed525308562cfc8b1fbfb6d27
 </body>
 </html>
