--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             display: flex;
             background-color: #fff;
             border: 1px solid #ddd;
-            border-radius: 5px;
+            border-radius: 1rem;
             margin-bottom: 20px;
             padding: 10px;
         }
@@ -78,8 +78,6 @@
 
         /* Form styles */
         #post-form {
-            background-color: #fff;
-            border: 1px solid #ddd;
             border-radius: 5px;
             padding: 10px;
             margin-bottom: 20px;
