--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             font-family: Arial, sans-serif;
             display: flex;
             flex-direction: row;
-            background-color: #f0f0f0;
-            
+            background: rgb(2,0,36);
+            background: linear-gradient(90deg, rgba(2,0,36,0.5) 0%, rgba(255,227,253,0.5) 0%, rgba(234,210,250,0.5) 34%, rgba(227,250,255,0.5) 100%);
         }
 
         /* Sidebar styles */
@@ -159,6 +159,13 @@ font-size: 20px;
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
                 <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
               </svg><span style="padding-left: 5px;">Notifications</span>
+            </li>
+            <li class ="list" style="list-style-type: none; align-items: center; vertical-align: middle;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-raised-hand" viewBox="0 0 16 16">
+                    <path d="M6 6.207v9.043a.75.75 0 0 0 1.5 0V10.5a.5.5 0 0 1 1 0v4.75a.75.75 0 0 0 1.5 0v-8.5a.25.25 0 1 1 .5 0v2.5a.75.75 0 0 0 1.5 0V6.5a3 3 0 0 0-3-3H6.236a.998.998 0 0 1-.447-.106l-.33-.165A.83.83 0 0 1 5 2.488V.75a.75.75 0 0 0-1.5 0v2.083c0 .715.404 1.37 1.044 1.689L5.5 5c.32.32.5.754.5 1.207Z"/>
+                    <path d="M8 3a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"/>
+                  </svg> <span style="padding-left: 0px;">Help a Prof</span>
+                
             </li>
             <li class ="list" style="list-style-type: none; align-items: center; vertical-align: middle; border-bottom: none;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-wide" viewBox="0 0 16 16">
